fixed collapsed navbar menu layout (need further fix)

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -16,15 +16,17 @@
 }
 
 @media (min-width:768px) and (max-width:991px){
-    /** lets bootstrap collapse so soon LOL **/
- 
-    .navbar-collapse .collapse {
-        display: none!important;
+    .navbar-nav {
+        position: static !important;
+        overflow: hidden;
     }
 }
 
 @media (min-width:992px) and (max-width:1199px){
-
+    .navbar-nav {
+        position: static !important;
+        overflow: hidden;
+    }
 }
 
 @media (min-width:1200px){
